Made some tests with Qt4 Model/View framework

--- a/src/mdtutils/CMakeLists.txt
+++ b/src/mdtutils/CMakeLists.txt
@@ -13,6 +13,7 @@ set (HEADER_FILES
           
           # Essais
           mdtStringListModel.h
+          # mdtTreeItem.h
     )
 
 
@@ -22,6 +23,7 @@ set (SOURCES_FILES
           mdtTime.cpp
           # Essais
           mdtStringListModel.cpp
+          mdtTreeItem.cpp
     )
 
 # Liste des fichiers ui
