Some test with Qt's Model/View

--- a/src/mdtutils/CMakeLists.txt
+++ b/src/mdtutils/CMakeLists.txt
@@ -10,10 +10,9 @@ set (LIB_DEST_DIR "${PROJECT_SOURCE_DIR}/../../bin")
 
 # Liste des fichiers d'entêtes Qt (entêtes contenant Q_OBJECT)
 set (HEADER_FILES 
-          
           # Essais
-          mdtStringListModel.h
-          # mdtTreeItem.h
+          mdtParentChildTableModel.h
+          mdtParentChildTableItem.h
     )
 
 
@@ -22,8 +21,8 @@ set (SOURCES_FILES
           mdtBuffer.cpp
           mdtTime.cpp
           # Essais
-          mdtStringListModel.cpp
-          mdtTreeItem.cpp
+          mdtParentChildTableModel.cpp
+          mdtParentChildTableItem.cpp
     )
 
 # Liste des fichiers ui
